--- a/wp-content/themes/gobelins/style.css
+++ b/wp-content/themes/gobelins/style.css
@@ -70,6 +70,11 @@ nav .show-menu:hover {
     opacity: 1;
 }
 
+nav .logo {
+    float: left;
+    margin-left: 15px;
+}
+
 nav .menu, nav .show-menu {
     background-color: rgba(5,5,5,0.9);
     padding: 15px 30px 10px 30px;
@@ -194,10 +199,37 @@ nav .menu a:hover {
     width: 100%;
 }
 
-.container-bonsplans {
+.container-bonsplans, .container-legal {
     position: absolute; top: 0;
     background: #fff;
     width: 100%;
+}
+
+.container-legal  .legal{
+    margin-top: 80px;
+    padding: 50px;
+    font-family: 'FuturaLTLight', sans-serif;
+    line-height: 32px;
+    width: 80%;
+}
+
+.container-legal .legal a {
+    color: black;
+}
+
+
+.container-legal .legal h2 {
+    font-family: 'FuturaLTBook', sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+    margin: 30px 0 20px 0;
+}
+
+.container-legal .legal h3 {
+    font-family: 'FuturaLTBook', sans-serif;
+    font-size: 38px;
+    font-weight: 700;
+    margin: 30px 0 20px 0;
 }
 
 .home_news h1 {
@@ -311,7 +343,7 @@ footer .credits {
 }
 
 .overlay {
-    position: fixed; top: 0; left: 0;
+    position: absolute; top: 0; left: 0;
     z-index: 200;
     width: 100%;
     height: 100%;
@@ -322,7 +354,7 @@ footer .credits {
 
 .adherer_popup {
     width: 800px;
-    margin: 120px auto 0 auto;
+    margin: 80px auto 0 auto;
     padding: 40px;
     background: #fff;
     z-index: 220;
