--- a/wp-content/themes/gobelins/style.css
+++ b/wp-content/themes/gobelins/style.css
@@ -16,28 +16,28 @@ Author: BDE Gobelins
 
 @font-face {
     font-family: 'FuturaLTLight';
+    src: url('font/futuralt-light.ttf') format('truetype');
     src: url('font/futuralt-light.eot');
     src: url('font/futuralt-light.eot') format('embedded-opentype'),
          url('font/futuralt-light.woff') format('woff'),
-         url('font/futuralt-light.ttf') format('truetype'),
          url('font/futuralt-light.svg#FuturaLTLight') format('svg');
 }
 
 @font-face {
     font-family: 'FuturaStdBold';
+    src: url('font/futurastd-bold.ttf') format('truetype');
     src: url('font/futurastd-bold.eot'),
          url('font/futurastd-bold.eot') format('embedded-opentype'),
          url('font/futurastd-bold.woff') format('woff'),
-         url('font/futurastd-bold.ttf') format('truetype'),
          url('font/futurastd-bold.svg#FuturaStdBold') format('svg');
 }
 
 @font-face {
     font-family: 'FuturaLTBook';
+    src: url('font/futuralt-book.ttf') format('truetype');
     src: url('font/futuralt-book.eot');
     src: url('font/futuralt-book.eot') format('embedded-opentype'),
          url('font/futuralt-book.woff') format('woff'),
-         url('font/futuralt-book.ttf') format('truetype'),
          url('font/futuralt-book.svg#FuturaLTBook') format('svg');
 }
 
@@ -129,7 +129,7 @@ nav .menu a:hover {
 .home_slider_item_content {
     padding: 15px 30px 15px 30px;
     width: 960px;
-    height: 170px;
+    height: 210px;
     /*border-radius: 6px;*/
     background: rgba(2,2,2,0.95);
 }
@@ -174,11 +174,11 @@ nav .menu a:hover {
 }
 
 .home_slider_item_content .date .avenir-3 {
-    font-size: 36px;
+    font-size: 34px;
     line-height: 42px;
     text-transform: uppercase;
     color: #c0392b;
-    font-family: 'FuturaLTLight', sans-serif;
+    font-family: 'FuturaStdBold', sans-serif;
 }
 
 .home_slider_item_content h1 {
@@ -195,6 +195,15 @@ nav .menu a:hover {
     font-family: 'FuturaLTLight', sans-serif;
     font-size: 18px;
     line-height: 22px;
+    overflow: hidden;
+}
+
+.home_slider_item_content .excerpt a {
+    text-transform: uppercase;
+    padding: 5px 10px 5px 10px;
+    background: #efefef;
+    color: black;    
+    font-size: 16px;
 }
 
 .slider_controls {
@@ -306,7 +315,7 @@ nav .menu a:hover {
 }
 
 .home_news_single_image {
-    width: 30%;
+    width: 500px;
     height: 300px;
     overflow: hidden;
     float: left;
@@ -358,6 +367,7 @@ nav .menu a:hover {
     font-family: 'FuturaLTLight', sans-serif;
     font-size: 19px;
     font-weight: normal;
+    line-height: 22px;
     padding: 10px 120px 0 10px;
 }
 
@@ -372,6 +382,22 @@ nav .menu a:hover {
 }
 
 .single_content p a.home { margin-right: 0px; }
+
+.single_content h2 {
+    font-size: 30px;
+    font-weight: 400;
+    margin: 20px 0 15px 0;
+}
+
+.single_content h3 {
+    font-size: 28px;
+    font-weight: 400;
+    margin: 20px 0 15px 0;
+}
+
+.single_content strong {
+    font-weight: bold;
+}
 
 .home_news_single_content a.more:hover, .single_content p a.home:hover {
     background: #000;
